<resources>
    <string name="app_name">Nutriobot</string>
    <string name="finding">Finding…</string>
    <string name="check">Check</string>
    <string name="back">Back</string>
    <string name="take_the_picture">Take the picture</string>
    <string name="request_failed">Failed to retrieve info. Please make sure your Mobile Data or WiFi is On</string>
    <string name="loading">Loading…</string>
    <string name="cam_perm_not_granted">Can\'t access camera </string>
    <string name="cam_perm_help">Please press back button and grant camera access or go to Settings>Apps>Nutriobot>Permissions>Camera and Click Allow and try again.</string>
    <string name="unidentified">UNIDENTIFIED</string>
    <string name='unidentified_info'>The object is not a fruit/vegetable or it is not in Nutriobot\'s list of identifiable fruit, it will soon be added :)</string>
    <string name="soon">Nutritional information will be soon added</string>
    <string name="carbohydrates">CARBOHYDRATES</string>
    <string name="protein">PROTEIN</string>
    <string name="fat">FAT</string>
    <string name="calories">CALORIES</string>
    <string name="sugar">SUGAR</string>
    <string name="loading_image">Loading image, please wait..</string>
</resources>